objects/Sample__c.object
<CustomObject>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Samples (Account Manager)</relationshipLabel>
        <relationshipName>Samples_Account_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Samples</relationshipLabel>
        <relationshipName>Samples</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>All_approvals_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All approvals complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_by_Logistics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved by Logistics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_by_Product_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved by Product Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_by_Sales_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved by Sales Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Samples</relationshipLabel>
        <relationshipName>Samples</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Labor__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost: Labor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Product__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost: Product</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Shipping__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost: Shipping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Total__c</fullName>
        <formula>Cost_Labor__c +  Cost_Product__c  +  Cost_Shipping__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost: Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Requested_By__c</fullName>
        <label>Date Requested By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Status__c</fullName>
        <label>Fulfillment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>In process</fullName>
                </value>
                <value>
                    <fullName>In transit</fullName>
                </value>
                <value>
                    <fullName>Not started</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Logistics_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Logistics Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Samples (Logistics Coordinator)</relationshipLabel>
        <relationshipName>Samples_Logistics_Coordinator</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Value__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Samples</relationshipLabel>
        <relationshipName>Samples</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Comments__c</fullName>
        <label>Product Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Samples (Product Lead)</relationshipLabel>
        <relationshipName>Samples_Product_Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Quantity__c</fullName>
        <label>Product Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Samples</relationshipLabel>
        <relationshipName>Samples</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ROI__c</fullName>
        <formula>Opportunity_Value__c /  Cost_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Required_Fields_Valid__c</fullName>
        <formula>(Approved_by_Product_Team__c || (Stage_number_formula__c &lt;= 3 ||  processbypass__c)) &amp;&amp;
 (Approved_by_Sales_Manager__c  || (Stage_number_formula__c &lt;= 4 ||  processbypass__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Required Fields Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Samples (Sales Manager)</relationshipLabel>
        <relationshipName>Samples_Sales_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sample_Type__c</fullName>
        <label>Sample Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Product</fullName>
                    <default>true</default>
                    <label>Standard Product</label>
                </value>
                <value>
                    <fullName>Custom Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Request</fullName>
                    <default>true</default>
                    <label>New Request</label>
                </value>
                <value>
                    <fullName>Product Specification</fullName>
                </value>
                <value>
                    <fullName>Product Development</fullName>
                </value>
                <value>
                    <fullName>Product Validation</fullName>
                </value>
                <value>
                    <fullName>Product Approval</fullName>
                </value>
                <value>
                    <fullName>Sales Approval</fullName>
                </value>
                <value>
                    <fullName>Logistics Review</fullName>
                </value>
                <value>
                    <fullName>Final Approval</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage_number_formula__c</fullName>
        <formula>CASE(TEXT(Stage__c), 
&quot;New Request&quot;, 1, 
&quot;Product Specification&quot;, 2,
&quot;Product Approval&quot;, 3,
&quot;Sales Approval&quot;, 4,
&quot;Product Specification&quot;, 5,
&quot;Logistics Review&quot;, 6,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage number (formula)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_to_Complete_days__c</fullName>
        <formula>Completed_Date__c - DATEVALUE(CreatedDate)</formula>
        <label>Time to Complete (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>processbypass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>processbypass</label>
        <type>Checkbox</type>
    </fields>
    <label>Sample</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>8/3/2020 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sample Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Samples</pluralLabel>
    <recordTypes>
        <fullName>Custom_Product_sample</fullName>
        <active>true</active>
        <label>Custom Product sample</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Product_Sample</fullName>
        <active>true</active>
        <label>Standard Product Sample</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>All_required_approvals</fullName>
        <active>false</active>
        <errorConditionFormula>NOT( All_approvals_complete__c )</errorConditionFormula>
        <errorMessage>One or more required approvals are missing before updating the stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Logistics_Approval_required</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(Approved_by_Logistics__c) &amp;&amp; (Stage_number_formula__c &gt; 5 &amp;&amp; NOT(processbypass__c))
&amp;&amp;  $User.Id = Account_Manager__r.Id</errorConditionFormula>
        <errorMessage>Cannot advanced past this stage without approval from Logistics Coordinator</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Passes_validation_formula</fullName>
        <active>false</active>
        <errorConditionFormula>NOT( Required_Fields_Valid__c )</errorConditionFormula>
        <errorMessage>One or more approvals are required before advancing to this stage. Please consult the Path.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Product_approval</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(Approved_by_Product_Team__c) &amp;&amp; (Stage_number_formula__c &gt; 3 &amp;&amp; NOT(processbypass__c))
&amp;&amp;  $User.Id = Account_Manager__r.Id</errorConditionFormula>
        <errorMessage>Cannot advance past this stage without approval from the Product team</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_feedback_to_close</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Feedback__c ) &amp;&amp; ISPICKVAL(Stage__c, &quot;Complete&quot;)</errorConditionFormula>
        <errorMessage>Cannot mark as closed without entering feedback</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Approval_required</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(Approved_by_Sales_Manager__c) &amp;&amp; 
(Stage_number_formula__c &gt; 4 || NOT(processbypass__c))
&amp;&amp;  $User.Id = Account_Manager__r.Id</errorConditionFormula>
        <errorMessage>Cannot advance past this stage without Sales Manager approval</errorMessage>
    </validationRules>
</CustomObject>